# EaFort

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: Func_AutoCompile.cmake  config.cmake  findMathKernel.cmake  fortranFlag.cmake
src/: CMakeLists.txt  modEaFort.F90  pkgEaFort.F90
src/GURU/src/: GURU.typ  modGURU.F90
src/GURU/src/GURU/: GURU.typ  GURU_Argument.inc  GURU_Message.inc
src/GURU/src/GURU/CommandArgument/: CommandArgument.inc
src/GURU/src/argGURU/: argGURU.inc  argGURU.typ
src/GURU/src/argGURU/CommandArgument/: CommandArgument.inc  CommandArgument.typ
src/GURU/src/auxiliary/: GetCharFromClass.inc  WriteMessage.inc  WriteMessage.proc
src/GURU/src/logGURU/: logGURU.inc  logGURU.typ
src/InfoFortran/: CMakeLists.txt
src/InfoFortran/src/: modInfoFortran.F90
src/InfoFortran/src/InfoArg/: InfoArg.inc  InfoArg.typ
src/InfoFortran/src/InfoArg/CommandArgument/: CommandArgument.inc  CommandArgument.typ
src/JSON/: CMakeLists.txt  modJSON.F90
src/JSON/src/: json.routine  modJSON.F90
src/JSON/src/routines/: jsonCore.inc  jsonCore.proc  jsonFunc.inc  jsonFunc.proc  jsonGetFunc.inc  jsonGetFunc.proc
src/OS/src/: modOS.F90
src/OS/src/fileSystem/: fileSystem.inc
src/auxilary/: GetStrFromClass.inc  GetStrFromClass.proc  GetValueFromChar.inc  GetValueFromChar.proc
src/fileIO/src/: modFileIO.F90
src/fileIO/src/fileIO/: fileIO.inc  fileIO.typ
src/fileIO/src/globalFileIO/: globalFileIO.typ
src/mathPack/src/: modMathPack.F90
src/mathPack/src/basicFunctions/: modBasicFunc.F90
src/mathPack/src/specialFunctions/besselFunc/: bessel_K.inc  bessel_Y.inc
src/src_EaFort/JSON/: CMakeLists.txt
src/src_EaFort/JSON/src/: modJSON.F90
src/src_EaFort/string/: CMakeLists.txt
src/src_EaFort/string/src/: modString.F90
src/src_EaFort/string/src/string/: string.inc  string.typ  stringH.inc
src/string/: CMakeLists.txt
src/string/src/: modString.F90
src/string/src/string/: string.inc  string.typ  stringH.inc  stringH.proc
test/testAuxFunc/: CMakeLists.txt
test/testAuxFunc/src/tests/: test_GetSingleValue.inc  test_GetSingleValueOrDefault.inc  test_GetVectorValue.inc  test_GetVectorValueOrDefault.inc
test/testFileIO/: CMakeLists.txt
test/testGURU/: CMakeLists.txt
test/testGURU/src/: testGURU.F90  testGURUModule.F90  testInfoFortran.F90  testInfoFortranModule.F90
test/testGURU/src/tests/: test_GURU_Argument.inc  test_GURUauxilary.inc  test_InfoArg.inc  test_argGURU.inc  test_argGURUVector.inc  test_logGURU.inc
test/testJSON/: CMakeLists.txt
test/testJSON/src/: testJSON.F90  testJSONModule.F90
test/testJSON/src/tests/: test_JSONCore.inc  test_JSONFunc.inc  test_JSONVarFuncAdd.inc  test_JSONVarFuncGet.inc  test_JSONVarFuncUpdate.inc
test/testMathPack/: CMakeLists.txt
test/testMathPack/src/: testMathPack.F90  testMathPackModule.F90
test/testMathPack/src/tests/specialFunctions/: testBesselFunc.inc
test/testOS/: CMakeLists.txt
test/testString/: CMakeLists.txt
test/testString/src/: testString.F90  testStringModule.F90
test/testString/src/tests/: test_String_SingleConversion.inc  test_String_VectorConversion.inc  test_VarToStringConv.inc
